[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tslib-package"
version = "0.0.1"
description = ""
authors = ["Nighthawk <git@qaq.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10, <3.13"

einops = ">=0.4.0"
matplotlib = ">=3.7.0"
numpy = ">=1.23.5"
pandas = ">=1.5.3"
patool = ">=1.12"
reformer-pytorch = ">=1.4.4"
scikit-learn = ">=1.2.2"
scipy = ">=1.10.1"
sktime = ">=0.16.1"
sympy = ">=1.11.1"
torch = ">=2.0.1"
tqdm = ">=4.64.1"
